@@ -1,5 +1,7 @@
 2003-05-12  Bradley Bell  <btb@icculus.org>
 
+	* main/inferno.c: added -nohogdir and -userdir options
+
 	* main/titles.c: use briefings with no extension
 
 0.2.3:
@@ -17,7 +19,7 @@
 	* main/Makefile.am: make dist fix
 
 0.2.2:
-	
+
 2003-04-29  Bradley Bell  <btb@icculus.org>
 
 	* configure.ac, 2d/2dsline.c, main/automap.c, libmve/mveplay.c:
